# translator

./: .gitignore  README.md  app.py  docx_writer.py  example_pdf_split.py  main.py  package-lock.json  package.json  pdf_utils.py  pyproject.toml  requirements_pdf.txt  server.js  test.py  translator.py
public/: index.html  script.js  styles.css
