[project]
name = "translater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.31",
    "unstructured[all-docs]>=0.18.13",
]
